# MyApp

./: README.md  pyproject.toml
myapp/: main.py  sub.py
