[tool.poetry]
name = "MyApp"
version = "0.1.0"
description = "A skeleton poetry project for python CLI app"
authors = ["Avan Suinesiaputra <avan.sp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
myapp = "myapp.main:app"
